Votingapp-Deployment/advanced/redis-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
    app: demo-voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: redis-pod
      app: demo-voting-app
  template:
    metadata:
      name: redis-pod
      labels:
          name: redis-pod
          app: demo-voting-app
    spec:
        containers:
          - name: redis
            image: redis
            ports:
              - containerPort: 6379
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - redis-pod
              topologyKey: "kubernetes.io/hostname"
