Votingapp-Deployment/advanced/worker-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  labels:
    name: worker-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-pod
      app: demo-voting-app
  template:
    metadata:
      name: worker-pod
      labels:
        name: worker-pod
        app: demo-voting-app
    spec:
      containers:
        - name: worker-app
          image: kodekloud/examplevotingapp_worker:v1
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - redis-pod
            topologyKey: "kubernetes.io/hostname"
