Votingapp-Deployment/advanced/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: votingapp.com
      http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 8080
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 8080

#
